<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkTheme"
    >
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="-150dp"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:id="@+id/content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/poster"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:alpha="0.8"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/image_poster"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/poster"
                tools:text="Judul Film/TvShow" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/release_date_label"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/tv_title"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:text="18 Desember 2020"
                />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="326dp" />

            <ImageView
                android:id="@+id/image_rating"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                app:srcCompat="@drawable/star"
                android:contentDescription="@string/imagerating" />
            <ImageView
                android:id="@+id/image_language"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                app:srcCompat="@drawable/language"
                android:contentDescription="@string/imageleagague" />

            <ImageView
                android:id="@+id/image_vote"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                app:srcCompat="@drawable/vote"
                android:contentDescription="@string/imageduration" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.33" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.6670" />

            <TextView
                android:id="@+id/ratingS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/image_rating"
                app:layout_constraintStart_toStartOf="@+id/image_rating"
                app:layout_constraintTop_toBottomOf="@+id/image_rating"
                tools:text="Lorem ipsum dolor" />

            <TextView
                android:id="@+id/original_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/image_language"
                app:layout_constraintStart_toStartOf="@+id/image_language"
                app:layout_constraintTop_toBottomOf="@+id/image_language"
                tools:text="Lorem ismet" />
            <TextView
                android:id="@+id/vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/image_vote"
                app:layout_constraintStart_toStartOf="@+id/image_vote"
                app:layout_constraintTop_toBottomOf="@+id/image_vote"
                tools:text="Lorem ismet" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/overview_label"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="@+id/overview"
                app:layout_constraintTop_toBottomOf="@+id/ratingS" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:text="@string/description" />



        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="170dp"
            android:contentDescription="@string/buttonfavorite"
            android:src="@drawable/ic_favorite_border"
            app:backgroundTint="@color/colorAccent2"
            app:elevation="15dp"
            app:fabSize="normal"
            />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</ScrollView>